<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".Views.HomeFragment">
    <LinearLayout
        android:id="@+id/lltWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="30dp"
        >
        <TextView
            android:id="@+id/txvWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_welcome_message_label_string"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="30dp"
            />
        <TextView
            android:id="@+id/txvWelcomeUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="20dp"
            android:textSize="25dp"
            android:text="Yingjian"
            />
    </LinearLayout>

    <GridView
        android:id="@+id/gdvTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="1"
        android:layout_gravity="center_horizontal"
        >
    </GridView>

</LinearLayout>