...
        app:cpv_unitScale="1"
        app:cpv_value="0"
        android:visibility="invisible"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmitSurvey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submission_submit_button_text"
        style="@style/SubmitButtonStyle"
        android:onClick="submitSurvey"
...
